2009-01-27  Carl-Anton Ingmarsson <ca.ingmarsson@gmail.com>

	* plugins/glade/anjuta-design-document.c
	(anjuta_design_document_set_design_view_parent):
	#569225 – glade-plugin build error

2009-01-27  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (enable_view_signals),
	(on_session_load), (goto_local_tree_iter), (goto_global_tree_iter),
	(on_treesearch_symbol_selected_event),
	(on_local_treeview_row_activated),
	(on_global_treeview_row_activated),
	(on_global_treeview_row_expanded),
	(on_global_treeview_row_collapsed), (on_project_element_added),
	(on_project_element_removed), (on_project_single_file_scan_end),
	(clear_project_progress_bar),
	(on_check_offline_single_file_scan_end),
	(do_import_system_sources_after_abort),
	(do_import_project_sources_after_abort),
	(do_import_project_sources), (do_import_system_sources),
	(do_check_languages_count), (do_check_offline_files_changed),
	(on_scan_end_manager), (symbol_db_activate):
	Fixed #568493 – Anjuta freezes after moving around large portions of code.

2009-01-26  Johannes Schmid  <jhs@gnome.org>

	Patch from Pavel Kostyuchenko:
	* libanjuta/interfaces/libanjuta.idl:
	* plugins/glade/Makefile.am:
	* plugins/glade/anjuta-design-document.c
	(anjuta_design_document_set_design_view_parent),
	(anjuta_design_document_design_view_destroy_cb),
	(anjuta_design_document_design_view_parent_set_cb),
	(anjuta_design_document_set_design_view),
	(anjuta_design_document_get_design_view),
	(anjuta_design_document_set_property),
	(anjuta_design_document_get_property),
	(anjuta_design_document_parent_set_cb),
	(anjuta_design_document_constructed),
	(anjuta_design_document_dispose),
	(anjuta_design_document_class_init), (anjuta_design_document_new),
	(ifile_get_file):
	* plugins/glade/anjuta-design-document.h:
	* plugins/glade/anjuta-glade.plugin.in:
	* plugins/glade/anjuta-glade.ui:
	* plugins/glade/plugin.c (plugin_glade_error_quark),
	(designer_associations_raise_editor_priority),