@@ -14,11 +14,11 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
   
-
 #ifndef _FILE_HISTORY_H
 #define _FILE_HISTORY_H
 
 #include <glib.h>
+#include <gio/gio.h>
 
 #include "anjuta-docman.h"
 
@@ -26,15 +26,15 @@ typedef struct _AnHistFile AnHistFile;
 
 struct _AnHistFile
 {
-	gchar *uri;
+	GFile *file;
 	gint line;
 };
 
-AnHistFile *an_hist_file_new (const gchar *uri, gint line);
+AnHistFile *an_hist_file_new (GFile *file, gint line);
 void an_hist_file_free(AnHistFile *h_file);
 
 void an_file_history_reset(void);
-void an_file_history_push (const gchar *uri, gint line);
+void an_file_history_push (GFile *file, gint line);
 void an_file_history_back(AnjutaDocman *docman);
 void an_file_history_forward(AnjutaDocman *docman);
 void an_file_history_dump(void);
